@@ -20,7 +20,7 @@ from distutils.core import setup
 
 setup(
       name="autokey",
-      version="0.61.2", 
+      version="0.61.3", 
       author="Chris Dekter",
       author_email="cdekter@gmail.com",
       url="http://autokey.googlecode.com/",
