@@ -37,7 +37,7 @@ LOG_FORMAT = "%(levelname)s - %(name)s - %(message)s"
 APP_NAME = "AutoKey"
 CATALOG = ""
 PROGRAM_NAME = ki18n("AutoKey")
-VERSION = "0.61.2"
+VERSION = "0.61.3"
 DESCRIPTION = ki18n("Desktop automation utility")
 LICENSE = KAboutData.License_GPL_V3
 COPYRIGHT = ki18n("(c) 2009 Chris Dekter")
